# ssf

./: .gitignore  Makefile  rarsif  svnstat  zipsif
SIFEL/: CMakeLists.txt  mergelib  svndiff
SIFEL/GEFEL/: CMakeLists.txt  Makefile  aggregator.h  block2.cpp  bmatrix.h  boundbox.h  cc.cpp  cr.h  csv.cpp  csv.h  densemat.cpp  densemat.h  diagmat.cpp  diagmat.h  difcalc.cpp  difcalc.h  dofrange.h  dskyline.cpp  eigsol.cpp  eigsol.h  elemmat.h  elemnode.cpp  endnode.cpp  fuzzygen.cpp  fuzzynum.h  gadaptivity.cpp  gedge.cpp  gedge.h  gefel.cpp  gelement.cpp  gelement.h  genfile.h  gfmatrix.h  gfunct.cpp  globalg.h  gmatrix.cpp  gnode.cpp  gnode.h  gphase.cpp  gsurf.cpp  (+41 more)
SIFEL/GEFEL/CMLFILE/: CMakeLists.txt  INSTALL  Makefile  README  cmlfile.cpp  cmlfile.h
SIFEL/GEFEL/EXAM/: CMakeLists.txt
SIFEL/GEFEL/LAPACK/: ReadMe.txt  spallocate.cpp  spfactor.cpp  spmatrix.h  spoutput.cpp  sptest.c  test2.cpp  test2.dsp
SIFEL/GEFEL/OPTIM/: TODO  general.h  grade.h  obj_funct.cpp  obj_funct.h  parameters.cfg  sade.cpp  sade.h
SIFEL/GEFEL/PARDISO/: files  tstiee.f
SIFEL/GEFEL/PARSER/: Makefile  equ.cpp  equ.h  errors.h  func.h  parser.cpp  parser.h
SIFEL/GEFEL/RANDY/: main.cpp  randy.cpp
SIFEL/GEFEL/SPARSE/: Array.h  BiSection.h  BigMatrix.cpp  ColHash.h  ConList.h  DSSolver.h  DenseMatrix.h  DenseMatrixArithmeticsNN.cpp  IntArrayList.h  MathTracer.cpp  MathTracer.h  SkyLineMtx.cpp  SkyLineMtx.h  SkyLineMtxLDL.cpp  SparseConectivityMtx.cpp  SparseConectivityMtxFixed.h  SparseGridColumn.h  SparseGridMtxLDL.cpp  SparseGridMtxLL.cpp  SparseGridMtxLL.h  SparseGridMtxLU.cpp  clean.sh
SIFEL/GEFEL/SURFFIND/: IO.cpp  main.cpp  makefile2  oblast.h  oblasti.h
SIFEL/HPARAL/: CMakeLists.txt
SIFEL/HPARAL/PREP/: clean.sh
SIFEL/HPARAL/SRC/: Makefile  Makefilem  Makefilet  (+12 more)
SIFEL/MAN/: CMakeLists.txt
SIFEL/MEFEL/: CMakeLists.txt  Makefile
SIFEL/METR/: CMakeLists.txt
SIFEL/PARGEF/: CMakeLists.txt  boundparcongrad.cpp  boundparcongrad.h  dpfeti.cpp  dpfeti_new.h  feti1.cpp  feti1.h  feti1o.cpp  fixnodesel.h  lplate.h  lplate_deb.cpp  lplate_new.h  lplate_old.h  parcongrad.cpp  parcongrad.h  partop.cpp  petsc_boundcg.h  pglobalg.h  psolver.cpp  schurcompl.cpp  selnodes.cpp  selnodes.h  zal_paral.h  zal_psolver.cpp
SIFEL/PARMEF/: CMakeLists.txt  bez
SIFEL/PARMETR/: CMakeLists.txt  Makefile  bez
SIFEL/PARTRF/: CMakeLists.txt
SIFEL/PREP/: CMakeLists.txt
SIFEL/TRFEL/: CMakeLists.txt
(+1431 files in other folders)
